--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.body {
+  color: #2b2c48;
+  font-family: "Jost", sans-serif;
+  background-image: url(./background.png);
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 100vh;
   display: flex;
+  flex-wrap: wrap;
+  padding: 20px;
+  overflow-y: hidden;
+}
+
+.card {
+  height: 550px;
+ 
+}
+.card {
+  width: 340px;
+  margin: auto;
+  position: relative;
+  z-index: 1;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  background-color: rgba(255, 255, 255, 1);
+  display: flex;
+  transition: 0.3s;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
 }
 
-.App-link {
-  color: #61dafb;
+.footer{
+  display: flex;
+  flex-wrap: nowrap;
+  
+}
+.footer > button{
+  width: 84px;
+  font-size: 10px;
+  font-weight: bolder;
+  border: none;
+  padding-left: 10px;
+  text-align: center;
+  line-height: 50px;
+ border-bottom: 3px solid transparent;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer > button:hover{
+  border-bottom: 3px solid #8a84ff;
+  background: linear-gradient(to bottom, rgba(127, 199, 231, 0) 0%, rgba(207, 204, 255, 0.2) 44%, rgba(211, 226, 255, 0.4) 100%);
 }
