--- a/src/App.css
+++ b/src/App.css
@@ -40,17 +40,24 @@
   
 }
 .footer > button{
-  width: 84px;
+  width: 85px;
   font-size: 10px;
   font-weight: bolder;
-  border: none;
+  border:none;
   padding-left: 10px;
   text-align: center;
-  line-height: 50px;
- border-bottom: 3px solid transparent;
+  line-height: 55px;
+  border-bottom: 0px solid transparent;
+  background-color: white;
+  
 }
 
 .footer > button:hover{
-  border-bottom: 3px solid #8a84ff;
-  background: linear-gradient(to bottom, rgba(127, 199, 231, 0) 0%, rgba(207, 204, 255, 0.2) 44%, rgba(211, 226, 255, 0.4) 100%);
+  border-bottom: 0px solid #8a84ff;
+  background: linear-gradient(to bottom, rgba(207, 204, 255, 0.2) 0%, rgba(211, 226, 255, 0.4) 44%,rgba(138, 132, 255, 1) 100%);
+}
+
+.footer > button:focus{
+  border-bottom: 0px solid #8a84ff;
+  background: linear-gradient(to bottom, rgba(207, 204, 255, 0.2) 0%, rgba(211, 226, 255, 0.4) 44%,rgba(138, 132, 255, 1) 100%);
 }
